src/test/ui/error-codes/E0490.rs
fn f<'a, 'b>(y: &'b ()) {
    let x: &'a _ = &y;
    //~^ E0490
    //~| E0495
    //~| E0495
}

fn main() {}
